--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<version>1.18.22</version> <!-- Use the latest version available -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 
 		<dependency>
