--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+#spring.data.mongodb.uri=mongodb+srv://ats-mobile:XLPvuJen8MW6ze1t@cluster0.cqybual.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=atsdb
 
 
