--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://devmastersinstitue.github.io/ats-mobile",
+  "homepage": "https://devmastersinstitue.github.io/",
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
