--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
 #spring.data.mongodb.uri=mongodb+srv://ats-mobile:XLPvuJen8MW6ze1t@cluster0.cqybual.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=atsdb
+#spring.data.mongodb.database=atsdb
 
+server.port=8080
+#server.address=0.0.0.0
+spring.data.mongodb.uri=mongodb://localhost:27017/atsdb
 
 spring.datasource.url=jdbc:h2:mem:atsdb
 spring.datasource.driverClassName=org.h2.Driver
