fix cross error in server and client api call

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.data.mongodb.database=atsdb
 
 server.port=8080
-#server.address=0.0.0.0
+server.address=0.0.0.0
 spring.data.mongodb.uri=mongodb://localhost:27017/atsdb
 
 spring.datasource.url=jdbc:h2:mem:atsdb
