--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.12.5</version> <!-- Use the latest version -->
 		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.3</version>
+		</dependency>
     </dependencies>
 
 	<build>
