--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
